--- a/ChineseVersion/课程_01.MD
+++ b/ChineseVersion/课程_01.MD
@@ -1,472 +1,334 @@
-# 使用 Python 创建代码
+# 讲义 1 — 条件判断（Conditionals）
 
-- VS Code 是一个文本编辑器。除了编辑文本之外，您还可以在终端上直观地浏览文件并运行基于文本的命令。  
-
-- 在终端中，您可以执行 `code hello.py` 来开始编码。  
-
-- 在上面的文本编辑器中，您可以输入 `print("hello, world")`。这是一个著名的经典程序，几乎所有程序员在学习过程中都会写。  
-
-- 在终端窗口中，您可以执行命令。要运行此程序，您需要将光标移动到屏幕底部，并在终端窗口中单击。现在，您可以在终端窗口中输入第二个命令。在美元符号旁边，输入 `python hello.py`，然后按下键盘上的 Enter 键。  
-
-- 回想一下，计算机实际上只能理解 0 和 1。因此，当你运行 `python hello.py` 时，Python 会解释你在 `hello.py` 中创建的文本，并将其翻译成计算机可以理解的 0 和 1。  
-
-- 运行 `python hello.py` 程序的结果是 `hello, world`。  
-
-- 恭喜！您刚刚创建了您的第一个程序。  
-
---- 
-
-# 功能
-
-- *函数* 是计算机或计算机语言已经知道如何执行的动作。  
-- 在您的 `hello.py` 程序中，**`print` 函数** 知道如何打印到终端窗口。  
-- **`print` 函数接受参数**。在本例中，`"hello, world"` 是 `print` 函数接受的参数。  
+## 目录
+- [条件判断](#条件判断)
+- [if 语句](#if-语句)
+- [控制流：`if`、`elif`、`else`](#控制流ifelifelse)
+- [`or`](#or-1)
+- [`and`](#and-1)
+- [取模（Modulo）](#取模modulo)
+- [编写自己的奇偶函数](#编写自己的奇偶函数)
+- [更 Pythonic 的写法](#更-pythonic-的写法)
+- [`match`](#match-1)
+- [小结](#小结)
 
 ---
 
-# 错误
+## 条件判断
 
-- 在编程过程中出现 *Bug 是很正常的*。这些都是错误，是需要你解决的问题！  
-  **不要灰心！** 这是成为优秀程序员过程中不可或缺的一部分。  
-
-- 想象一下，在我们的 `hello.py` 程序中，我们不小心输入了：  
-
-  ```python
-  print("hello, world"（忘记了 print 函数最后的 )）。
- - 如果你犯了这个错误，解释器就会在终端窗口输出 **一个错误**！
-
-- 错误信息 通常可以 告诉你错误所在，并提供修复错误的线索。然而，很多时候解释器并没有这么有用。
-  
----
-
-# 改进你的第一个 Python 程序
-
-- 我们可以让你的第一个 Python 程序更加 *个性化*。  
-
-- 在 `hello.py` 文件中，我们可以加入另一个函数。**`input`** 是一个接受提示作为参数的函数。我们可以将代码修改为：
-
-```python
-input("What's your name? ")
-print("hello, world")
-```
-
-- 但是，仅凭这一处修改并不能让程序输出用户输入的内容。为此，我们需要向你介绍 **<mark>变量</mark>**。  
+- **条件判断**让程序可以*做决定*，在多条路径中选择其一。
+- Python 提供一组常用比较运算符：
+  - `>` 大于，`<` 小于
+  - `>=` **大于等于**，`<=` **小于等于**
+  - `==` **相等**（注意：单等号 `=` 是赋值；双等号 `==` 是比较）
+  - `!=` **不等于**
+- 比较表达式会得到布尔值 **`True`/`False`**。
 
 ---
 
-# 变量
-
-- *变量* 就是程序中的一个容器，用于存储一个值。  
-
-- 在程序中，你可以引入自己的变量，例如：
-
-```python
-name = input("What's your name? ")
-print("hello, world")
-```
-
-- 注意，中间的等号 **`=`** 在 `name = input("What's your name? ")` 中在编程里有 **特殊作用**。这个等号表示将右边的值赋给左边。因此，`input("What's your name? ")` 返回的值被赋给 **<mark>name</mark>**。  
-
-- 如果你将代码修改为如下形式，你会发现一个 *意外的结果*：
-
-```python
-name = input("What's your name? ")
-print("hello, name")
-```
-
-- 无论用户输入什么，程序都会在终端窗口输出 `hello, name`。  
-
-- 进一步修改代码，你可以这样写：
-
-```python
-name = input("What's your name? ")
-print("hello,")
-print(name)
-```
-
-- 终端窗口中的结果将是：
-
-```text
-What's your name? David
-hello
-David
-```
-
-- 我们离预期的结果更近了！🎉  
-- 你可以在 Python 官方文档了解更多 **数据类型**：https://docs.python.org/3/library/stdtypes.html
-
----
-# 注释
-
-- **注释** 是程序员在程序中 *记录自己正在做的事情* 的方式，也可以告诉他人某段代码的意图。简单来说，注释是写给自己和他人看的笔记！
-- 你可以在程序中加入注释来说明程序正在做什么。示例：
-
-```python
-# 询问用户的名字
-name = input("What's your name? ")
-print("hello,")
-print(name)
-```
-
-- 注释也可以作为你的 *待办事项清单*。
-
----
-
-# 伪代码
-
-- **伪代码** 是一种 *重要的注释形式*，常被当作待办清单，尤其是在你还不知道如何完成某个编码任务时。
-- 例如，代码可以写成：
-
-```python
-# 询问用户的名字
-name = input("What's your name? ")
-
-# 打印 hello
-print("hello,")
-
-# 打印输入的名字
-print(name)
-```
-
----
-
-# 进一步改进你的第一个 Python 程序
-
-- 我们可以继续如下改进（字符串拼接）：
-
-```python
-# 询问用户的名字
-name = input("What's your name? ")
-
-# 打印 hello 和输入的名字
-print("hello, " + name)
-```
-
-- 事实上，有些函数可以接受多个参数。
-- 我们可以使用 **逗号 <mark>,</mark>** 来传入 *多个参数*，示例：
-
-```python
-# 询问用户的名字
-name = input("What's your name? ")
-
-# 打印 hello 和输入的名字
-print("hello,", name)
-```
-
-- 在终端中，如果输入 **"David"**，输出结果是：
-
-```text
-hello, David
-```
-
-**<mark>成功！</mark> 🎉**
-
----
-
-# 字符串与参数
-
-- 在 Python 中，字符串（**`str`**）是*一段文本序列*。
-- 回到之前的代码，我们看到一个视觉副作用：结果分成多行显示：
-
-```python
-# 询问用户的名字
-name = input("What's your name? ")
-print("hello,")
-print(name)
-```
-
-- 函数可以接收**参数**来影响其行为。根据 **`print`** 的文档，它默认带有参数 **`end='\n'`**，其中 `\n` 表示换行。____________
-- 不过我们可以自己提供 **`end`** 参数，从而*不*自动换行：
-
-```python
-# 询问用户的名字
-name = input("What's your name? ")
-print("hello,", end="")
-print(name)
-```
-
-- 通过 **`end=""`**，输出会变成同一行：`hello, David`。  
-- “参数”就是函数可以接收的值。更多见 **`print`** 文档：https://docs.python.org/3/library/functions.html#print
-
----
-# 引号的一个小问题
-
-- 请注意，在字符串中加入引号是*有挑战性的*。
-
-- **<mark>`print("hello,"friend"")`</mark>** 将不起作用，并且解释器会抛出错误。
-
-- 一般来说，有两种解决方式：  
-  1. 直接把引号改为 **单引号**。  
-  2. 更常见的方法是使用反斜杠对引号进行转义：
-
-```python
-print("hello, \"friend\"")
-```
-
-- 反斜杠告诉解释器，后面的字符应被视为字符串中的一部分，而不是结束符。  
-- 这样，解释器就不会报错。
----
-# 字符串格式化
-
-- 这里最优雅的方式是使用 **f-string**：
-
-```python
-# 询问用户的名字
-name = input("What's your name? ")
-print(f"hello, {name}")
-```
-
-- 注意 `print(f"hello, {name}")` 中的 **<mark>f</mark>**，它告诉 Python 要对字符串进行*格式化*并替换 `{…}` 内的表达式。
-
----
-
-# 更多字符串技巧
-
-- 不要指望用户总是“乖乖配合”，要对输入进行*校验或清理*。
-- 使用 **`strip()`** 可以移除两端空白：
-
-```python
-name = input("What's your name? ")
-name = name.strip()
-print(f"hello, {name}")
-```
-
-- 用 **`title()`** 可以把每个单词的首字母大写：
-
-```python
-name = input("What's your name? ")
-name = name.strip()
-name = name.title()
-print(f"hello, {name}")
-```
-
-- 也可以**链式调用**提高效率：
-
-```python
-name = input("What's your name? ").strip().title()
-print(f"hello, {name}")
-```
-
-- 更多内容见 **`str`** 文档：https://docs.python.org/3/library/stdtypes.html#text-sequence-type-str
-
----
-
-# 整数（int）
-
-- 在 Python 中，整数类型是 **`int`**。
-- 数学里我们熟悉 `+ - * / %` 等运算符。
-- 你可以在终端使用 REPL（`>>>`）直接运行代码，但我们通常在文件里编写。
-- 在终端中新建文件 `calculator.py` 并写入：
-
-```python
-x = 1
-y = 2
-
-z = x + y
-
-print(z)
-```
-
-- 运行 `python calculator.py` 会输出 `3`。让它更互动：
-
-```python
-x = input("What's x? ")
-y = input("What's y? ")
-
-z = x + y
-
-print(z)
-```
-
-- 输出为 `12`，不正确，因为 **`+`** 连接的是两个字符串。我们需要将输入转换为整数：
-
-```python
-x = input("What's x? ")
-y = input("What's y? ")
-
-z = int(x) + int(y)
-
-print(z)
-```
-
-- 这叫做*类型转换*（casting）。进一步优化（嵌套调用 `input` 与 `int`）：
+## if 语句
 
 ```python
 x = int(input("What's x? "))
 y = int(input("What's y? "))
 
-print(x + y)
+if x < y:
+    print("x is less than y")
 ```
-
-- 先执行 `input`，再执行 `int`。更多见 **`int`** 文档：https://docs.python.org/3/library/functions.html#int
+- `if` 语句使用 `bool （布尔值）（ True 或 False ）`来决定是否执行代码。
+- `if` 后面的布尔表达式为 `True` 时，**缩进**代码块才会执行。
 
 ---
 
-# 可读性至上
+## 控制流：`if`、`elif`、`else`
 
-- 无论采用哪种实现方式，代码必须 **易读**。通过注释为自己和他人提供线索，写出清晰、可维护的代码。
+- 注意你是如何提供一系列 if 语句的。首先，第一个 if 语句被求值。然后，第二个 if 语句运行其求值。最后，最后一个 if 语句运行其求值。这种决策流程称为“控制流”。
+- 初版（每个条件都独立判断）：
 
+
+```python
+x = int(input("What's x? "))
+y = int(input("What's y? "))
+
+if x < y:
+    print("x is less than y")
+if x > y:
+    print("x is greater than y")
+if x == y:
+    print("x is equal to y")
+```
+- 虽然您的计算机可能不会注意到我们的第一个程序和这个修改后的程序在速度方面的差异，但请考虑一下每天运行数十亿或数万亿次此类计算的在线服务器肯定会受到如此小的编码决策的影响。
+  
+
+- 使用 **`elif`** / **`else`** 只会执行**其中一个**分支，降低复杂度：
+
+```python
+x = int(input("What's x? "))
+y = int(input("What's y? "))
+
+if x < y:
+    print("x is less than y")
+elif x > y:
+    print("x is greater than y")
+else:
+    print("x is equal to y")
+```
+- 我们可以使用 else 语句创建一个“包罗万象”的默认结果
+- 请注意，通过我们的修改，该程序的相对复杂性已经降低。
 ---
 
-# 浮点基础（float）
+## or
 
-- **float** 表示带小数点的实数，例如 `0.52`。
-- 支持浮点数：
+- `or` 让我们在一个或多个选项之间做出选择：
 
 ```python
-x = float(input("What's x? "))
-y = float(input("What's y? "))
+x = int(input("What's x? "))
+y = int(input("What's y? "))
 
-print(x + y)
+if x < y or x > y:
+    print("x is not equal to y")
+else:
+    print("x is equal to y")
 ```
+- 请注意，我们的程序结果是相同的，但复杂度降低了。我们的代码效率提高了。
+  
 
-- 输入 `1.2` 和 `3.4`，输出 `4.6`。
-
-- 取整或四舍五入（`round(number[, ndigits])`）：
+- 进一步简化：直接使用 **`!=`** 问一个问题即可：
 
 ```python
-x = float(input("What's x? "))
-y = float(input("What's y? "))
+x = int(input("What's x? "))
+y = int(input("What's y? "))
 
-z = round(x + y)
-print(z)
+if x != y:
+    print("x is not equal to y")
+else:
+    print("x is equal to y")
 ```
+- 注意，我们完全去掉了“ or ，而是简单地问：“x 不等于 y 吗？”我们只问了一个问题。非常高效！
+  
 
-- 大数字加千分位：
-
-```python
-x = float(input("What's x? "))
-y = float(input("What's y? "))
-
-z = round(x + y)
-print(f"{z:,}")
-```
-
----
-
-# 更多浮点技巧
-
-- 除法可能得到很多小数位：
+- 温馨提醒：**<mark>`==` 用于比较；`=` 用于赋值</mark>**。
+- 注意， == 运算符会判断左右两边的内容是否相等。使用两个等号非常重要。如果只使用一个等号，解释器很可能会抛出错误。
 
 ```python
-x = float(input("What's x? "))
-y = float(input("What's y? "))
+x = int(input("What's x? "))
+y = int(input("What's y? "))
 
-z = x / y
-print(z)
-```
-
-- 保留两位小数（两种方式）：
-
-```python
-# round
-x = float(input("What's x? "))
-y = float(input("What's y? "))
-z = round(x / y, 2)
-print(z)
-
-# f-string
-x = float(input("What's x? "))
-y = float(input("What's y? "))
-z = x / y
-print(f"{z:.2f}")
-```
-
-- 更多见 **`float`** 文档：https://docs.python.org/3/library/functions.html#float
-
----
-
-# Def（自定义函数）
-
-- 让我们来创建自己的函数。
-- 先从零开始，然后逐步抽取函数：
-
-```python
-name = input("What's your name? ").strip().title()
-hello()
-print(name)
-```
-
-- 这会报错，因为 `hello` 尚未定义。定义它：
-
-```python
-def hello():
-    print("hello")
-
-name = input("What's your name? ")
-hello()
-print(name)
-```
-
-- 函数体中的代码需要**缩进**。进一步让函数接收参数：
-
-```python
-def hello(to):
-    print("hello,", to)
-
-name = input("What's your name? ")
-hello(name)
-```
-- 请注意， def hello() 下的所有内容都已缩进。Python 是一种缩进语言。它使用缩进来理解哪些内容属于上述函数的一部分。因此， hello 函数中的所有内容都必须缩进。如果某些内容未缩进，则会将其视为不在 hello 函数内。在终端窗口中运行 python hello.py ，您会发现输出可能与您预期的并不完全一致。
-
-
-
-- 增加**默认参数**：
-
-```python
-def hello(to="world"):
-    print("hello,", to)
-
-name = input("What's your name? ")
-hello(name)
-hello()  # 不传参，默认输出 hello, world
-```
-
-- 使用 **`main`** 来组织：
-
-```python
-def main():
-    name = input("What's your name? ")
-    hello(name)
-    hello()
-
-def hello(to="world"):
-    print("hello,", to)
-
-main()
+if x == y:
+    print("x is equal to y")
+else:
+    print("x is not equal to y")
 ```
 
 ---
 
-# 返回值
-- 你可以想象很多场景，你不仅希望函数执行某个操作，还希望它能将值返回给主函数。例如，你可能希望函数不仅仅是打印 x + y 的计算结果，而是将此计算结果返回给程序的其他部分。这种“返回”值的行为我们称之为 return 值。
-- 有时我们希望函数 *返回* 值而不是只打印：
+## and
+
+- 与 `or` 类似，`and` 可用来连接多个条件。示例（评分程序 `grade.py`）：
+
+```python
+score = int(input("Score: "))
+
+if score >= 90 and score <= 100:
+    print("Grade: A")
+elif score >= 80 and score < 90:
+    print("Grade: B")
+elif score >= 70 and score < 80:
+    print("Grade: C")
+elif score >= 60 and score < 70:
+    print("Grade: D")
+else:
+    print("Grade: F")
+```
+
+- Python 支持**链式比较**，更简洁可读：
+
+```python
+score = int(input("Score: "))
+
+if 90 <= score <= 100:
+    print("Grade: A")
+elif 80 <= score < 90:
+    print("Grade: B")
+elif 70 <= score < 80:
+    print("Grade: C")
+elif 60 <= score < 70:
+    print("Grade: D")
+else:
+    print("Grade: F")
+```
+- 请注意，Python 如何允许您以一种在其他编程语言中并不常见的方式将运算符和条件链接在一起。
+
+
+- 尽管如此，我们仍然可以进一步改进我们的程序：
+```python
+score = int(input("Score: "))
+
+if score >= 90:
+    print("Grade: A")
+elif score >= 80:
+    print("Grade: B")
+elif score >= 70:
+    print("Grade: C")
+elif score >= 60:
+    print("Grade: D")
+else:
+    print("Grade: F")
+```
+- 注意，通过减少提问次数，程序得到了怎样的改进。这使得我们的程序更易于阅读，并且将来更易于维护。
+- 您可以在 Python 的控制流文档中了解更多信息。(https://docs.python.org/3/tutorial/controlflow.html)
+
+---
+
+## 取模（Modulo）
+
+- **奇偶性（Parity）**：判断一个数是偶数还是奇数。取模运算符 **`%`** 返回余数：
+- 编程中的模数 % 运算符允许人们查看两个数字是否可以整除或相除后是否有余数。
+
+
+- 例如，4 % 2 的结果为零，因为它能被整除。然而，3 % 2 却不能被整除，所以结果不是零！
+- 请注意我们的用户可以输入任何 1 或更大的数字来查看它是偶数还是奇数。
+```python
+x = int(input("What's x? "))
+
+if x % 2 == 0:
+    print("Even")
+else:
+    print("Odd")
+```
+
+---
+
+## 编写自己的奇偶函数
+- 正如在讲座 0 中所讨论的，您会发现创建自己的函数很有用！
+- 我们可以创建自己的函数来检查一个数字是偶数还是奇数。调整代码如下：
 
 ```python
 def main():
     x = int(input("What's x? "))
-    print("x squared is", square(x))
+    if is_even(x):
+        print("Even")
+    else:
+        print("Odd")
 
-def square(n):
-    return n * n
+def is_even(n):
+    if n % 2 == 0:
+        return True
+    else:
+        return False
 
 main()
 ```
+- 请注意，即使没有运算符，我们的 if 语句 is_even(x) 也能正常工作。这是因为我们的函数返回一个 bool True 或 False 给主函数。if if 只是判断 x 的 is_even 是否为真。
 
-- 这里 `x` 被传入 **`square`**，`x * x` 的结果被返回给 `main`。
 
 ---
 
-# 总结
+## 更 Pythonic 的写法
+- 在编程的世界里，有些类型的编程本质上被称为“Pythonic”。也就是说，有些编程方法有时只在 Python 编程中出现。考虑以下对我们程序的修改：
 
-在本讲中你学习了：
+```python
+def main():
+    x = int(input("What's x? "))
+    if is_even(x):
+        print("Even")
+    else:
+        print("Odd")
 
-- 第一个 Python 程序的构建  
-- 函数与 <mark>参数</mark>  
-- Bug、变量、注释与伪代码  
-- 字符串与格式化（f-string）  
-- 整数与浮点数  
-- <mark>可读性</mark> 原则  
-- 自定义函数与返回值
+def is_even(n):
+    return True if n % 2 == 0 else False
+    # 或者：return n % 2 == 0
+```
+- 请注意，我们代码中的这个 return 语句几乎就像一个英文句子。这是 Python 中独有的编码方式。
+- 这行返回语句几乎像英文一样直观，十分 **Pythonic**。
+- 请注意，程序将评估 n % 2 == 0 中发生的情况为 True 或 False ，然后将其返回给主函数。
+---
+
+## match
+
+- 类似 `if/elif/else`，**`match`**（Python 3.10+）可根据具体值来运行对应分支：
+- 与 if 、 elif 和 else 语句类似， match 语句可用于有条件地运行与特定值匹配的代码。
 
 
+- 考虑以下程序：
+```python
+name = input("What's your name? ")
+
+  if name == "Harry":
+      print("Gryffindor")
+  elif name == "Hermione":
+      print("Gryffindor")
+  elif name == "Ron": 
+      print("Gryffindor")
+  elif name == "Draco":
+      print("Slytherin")
+  else:
+      print("Who?")
+```
+- 请注意，前三个条件语句打印相同的响应。
+
+
+- 我们可以使用 or 关键字稍微改进一下这段代码：
+```python
+  name = input("What's your name? ")
+
+  if name == "Harry" or name == "Hermione" or name == "Ron": 
+      print("Gryffindor")
+  elif name == "Draco":
+      print("Slytherin")
+  else:
+      print("Who?")
+```
+- 请注意， elif 语句的数量已经减少，从而提高了代码的可读性。
+
+
+- 或者，我们可以使用 match 语句将名称映射到房屋。请考虑以下代码：
+```python
+  name = input("What's your name? ")
+
+  match name: 
+      case "Harry":
+          print("Gryffindor")
+      case "Hermione":
+          print("Gryffindor")
+      case "Ron": 
+          print("Gryffindor")
+      case "Draco":
+          print("Slytherin")
+      case _:
+          print("Who?")
+```
+- 注意最后一种情况中 _ 符号的使用。这将匹配任何输入，导致与 else 语句类似的行为。
+- match 语句将 match 关键字后面的值与 case 关键字后面的每个值进行比较。如果匹配成功，则执行相应的缩进代码段，程序停止匹配。
+
+``
+- 我们可以改进代码：
+
+
+
+```python
+name = input("What's your name? ")
+
+match name:
+    case "Harry" | "Hermione" | "Ron":
+        print("Gryffindor")
+    case "Draco":
+        print("Slytherin")
+    case _:
+        print("Who?")
+```
+
+- 竖线 **`|`** 在 `case` 中的作用类似 `or`。
+
+---
+
+## 小结
+
+你现在可以使用条件语句来**提问并根据答案采取行动**：
+
+- **条件判断**与比较运算符  
+- **`if` / `elif` / `else`** 控制流  
+- 逻辑运算：**`or`** 与 **`and`**  
+- **取模**与奇偶判断  
+- **可复用函数**与 *Pythonic* 的返回方式  
+- 结构化匹配 **`match`**
