--- a/ChineseVersion/课程_08_面向对象编程.MD
+++ b/ChineseVersion/课程_08_面向对象编程.MD
@@ -378,29 +378,64 @@ class Student:
 
 ## 装饰器 / 属性（`@property`）
 - 通过 **`@property`** + 私有字段如 `_house`，实现“点语法访问、赋值即校验”。
+- 属性可以用来强化我们的代码。在 Python 中，我们使用以 @ 开头的函数“装饰器”来定义属性。
+
 ```py
 class Student:
     def __init__(self, name, house):
-        if not name: raise ValueError("Invalid name")
-        self._name = name
-        self.house = house  # 触发 setter
+        self.name = name
+        self.house = house
 
+    def __str__(self):
+        return f"{self.name} from {self.house}"
+
+    # Getter for name
     @property
-    def name(self): return self._name
+    def name(self):
+        return self._name
+
+    # Setter for name
     @name.setter
-    def name(self, v):
-        if not v: raise ValueError("Invalid name")
-        self._name = v
+    def name(self, name):
+        if not name:
+            raise ValueError("Invalid name")
+        self._name = name
 
     @property
-    def house(self): return self._house
+    def house(self):
+        return self._house
+
     @house.setter
-    def house(self, v):
-        if v not in {"Gryffindor","Hufflepuff","Ravenclaw","Slytherin"}:
+    def house(self, house):
+        if house not in ["Gryffindor", "Hufflepuff", "Ravenclaw", "Slytherin"]:
             raise ValueError("Invalid house")
-        self._house = v
+        self._house = house
+
+
+def main():
+    student = get_student()
+    print(student)
+
+
+def get_student():
+    name = input("Name: ")
+    house = input("House: ")
+    return Student(name, house)
+
+
+if __name__ == "__main__":
+    main()
 ```
+- 注意我们在名为 house 函数上方编写了 @property 。这样做将 house 定义为我们类的一个属性。有了 house 作为属性，我们就可以定义如何设置和检索类的某些属性 _house 。实际上，我们现在可以通过 @house.setter 定义一个名为“setter”的函数，每当设置 house 属性时都会调用该函数 - 例如，设置 student.house = "Gryffindor" 。在这里，我们让 setter 为我们验证 house 的值。注意，如果 house 的值不是任何哈利波特房屋，我们会引发 ValueError 否则，我们将使用 house 来更新 _house 的值。为什么是 _house 而不是 house ？ house 是我们类的一个属性，用户可以通过它尝试设置我们的类属性。 _house 就是该类属性本身。前导下划线 _ 向用户指示他们不需要（事实上，也不应该！）直接修改此值。 _house 只能通过 house setter 来设置。请注意， house 属性只是返回 _house 的值，而 _house 是我们类的属性，它大概已经通过 house setter 进行了验证。当用户调用 student.house 时，他们通过 house 的 getter 获取 _house 的值。
+
+> 这段文字主要介绍了在 Python 中如何利用 @property 装饰器定义类属性，以及如何通过 getter 和 setter 方法实现数据封装和输入校验。 
+> 1. 定义属性 (@property)： 在一个函数（例如 house）上方使用 @property，可以将该函数转换为类的属性。当用户访问这个属性时（例如 student.house），实际上是调用了这个属性的 getter 函数。
+> 2. 设置器（Setter，@house.setter）： 通过 @属性名.setter 装饰器来定义设置器函数。当用户尝试给这个属性赋值时（例如 student.house = "Gryffindor"），设置器会自动被调用。
+> 3. 封装与校验： 设置器的主要职责是验证输入值。文中的例子展示了设置器如何检查赋给属性的值是否符合预设的条件（例如是否为有效的霍格沃茨学院），如果不符合则抛出 ValueError。
+> 4. 内部属性 (_house)： 属性通过一个带有前导下划线（例如 _house）的内部类属性来存储实际的数据。这个下划线表明该属性是受保护的，用户不应直接修改它，而应该始终通过定义好的 setter 方法进行设置。
+
 <mark>经验：</mark> 只在**构造器/Setter**校验一次，其他地方重用即可。
+- 您可以在 Python 的方法文档中了解更多信息。 https://docs.python.org/3/tutorial/classes.html
 
 ---
 
@@ -410,10 +445,42 @@ class Student:
 print(type(50)), print(type("hi")), print(type([1])), print(type({"a":1}))
 ```
 
+- 如果你深入研究 int 的文档，你会发现它是一个带有构造函数的类。它是创建 int 类型对象的蓝图。你可以在 Python 的 int 文档中了解更多信息。 https://docs.python.org/3/library/functions.html#int
+
+- 字符串也是一个类。如果你使用过 str.lower() ，那么你使用的就是 str 类中的一个方法。你可以在 Python 的 str 文档中了解更多信息。 https://docs.python.org/3/library/stdtypes.html#str
+
+- list 也是一个类。查看 list 的文档，你可以看到其中包含的方法，例如 list.append() 。你可以在 Python 的 list 文档中了解更多信息。 https://docs.python.org/3/library/stdtypes.html#list
+
+- dict 也是 Python 中的一个类。你可以在 Python 的 dict 文档中了解更多信息。 https://docs.python.org/3/library/stdtypes.html#dict
+
 ---
 
 ## 类方法
 **`@classmethod`** 作用于“类本身”，可作**备用构造器**：
+- 有时，我们想向类本身添加功能，而不是向该类的实例添加功能。
+- @classmethod 是一个函数，我们可以使用它来为整个类添加功能。
+  
+
+- 下面是一个不使用类方法的示例。在终端窗口中，输入 code hat.py 并执行如下代码：
+```python
+import random
+
+
+class Hat:
+    def __init__(self):
+        self.houses = ["Gryffindor", "Hufflepuff", "Ravenclaw", "Slytherin"]
+
+    def sort(self, name):
+        print(name, "is in", random.choice(self.houses))
+
+
+hat = Hat()
+hat.sort("Harry")
+```
+- 注意，当我们将学生的名字传递给分院帽时，它会告诉我们学生被分配到哪个学院。注意， hat = Hat() 实例化了一个 hat 。 sort 功能始终由 Hat 类的实例处理。通过执行 hat.sort("Harry") ，我们将学生的名字传递给了 Hat 类实例的 sort 方法，我们将其命名为 hat 。
+
+
+- 不过，我们可能想在不创建分院帽实例的情况下运行 sort 函数（毕竟只有一个！）。我们可以修改代码如下：
 ```py
 import random
 class Hat:
@@ -421,7 +488,12 @@ class Hat:
     @classmethod
     def sort(cls, name):
         print(name, "is in", random.choice(cls.houses))
+Hat.sort("Harry")
 ```
+- 注意 __init__ 方法被移除了，因为我们不需要在代码的任何地方实例化一个 hat。因此， self 不再重要，因此被移除了。我们将此 sort 指定为 @classmethod ，将 self 替换为 cls 。最后，请注意，在代码末尾， Hat 按照惯例被大写，因为这是我们类的名称。
+
+
+- 回到 students.py 我们可以按如下方式修改代码，解决一些与 @classmethod 相关的错过的机会：
 ```py
 class Student:
     ...
@@ -429,6 +501,8 @@ class Student:
     def get(cls):
         return cls(input("Name: "), input("House: "))
 ```
+- 注意， get_student 已被移除，并创建了一个名为 get 的 @classmethod 。现在无需先创建学生即可调用此方法。
+
 
 ---
 
@@ -438,6 +512,8 @@ class Student:
 ---
 
 ## 继承
+- 继承也许是面向对象编程最强大的特性。
+- 碰巧的是，您可以创建一个从另一个类“继承”方法、变量和属性的类。
 ```py
 class Wizard:
     def __init__(self, name):
@@ -454,30 +530,76 @@ class Professor(Wizard):
         super().__init__(name)
         self.subject = subject
 ```
+- 请注意，上面有一个名为 Wizard 类和一个名为 Student 类。此外，请注意，还有一个名为 Professor 类。学生和教授都有名字。而且，他们都是巫师。因此， Student 和 Professor 都继承了 Wizard 的特征。在“子”类 Student 中， Student 可以从“父”类或“超”类 Wizard 继承，因为 super().\__init__(name) 这行代码运行了 Wizard 的 init 方法。最后，请注意，这段代码的最后几行创建了一个名为 Albus 的巫师、一个名为 Harry 的学生等等。
+
 
 ---
 
 ## 继承与异常层级
 - 异常是**树形结构**；捕获父类可统一处理子类（如 `Exception` 捕获 `ValueError` 等）。
-
+```
+  BaseException
+ +-- KeyboardInterrupt
+ +-- Exception
+      +-- ArithmeticError
+      |    +-- ZeroDivisionError
+      +-- AssertionError
+      +-- AttributeError
+      +-- EOFError
+      +-- ImportError
+      |    +-- ModuleNotFoundError
+      +-- LookupError
+      |    +-- KeyError
+      +-- NameError
+      +-- SyntaxError
+      |    +-- IndentationError
+      +-- ValueError
+ ...
+ ```
+- 您可以在 Python 的异常文档中了解更多信息。 https://docs.python.org/3/library/exceptions.html
 ---
 
 ## 运算符重载
-通过 **dunder** 方法赋予类型更多语义：
+一些运算符（例如 + 和 - 可以“重载”，这样它们就可以具有超出简单算术的更多功能。
 ```py
 class Vault:
-    def __init__(self, g=0, s=0, k=0):
-        self.galleons, self.sickles, self.knuts = g, s, k
+    def __init__(self, galleons=0, sickles=0, knuts=0):
+        self.galleons = galleons
+        self.sickles = sickles
+        self.knuts = knuts
+
     def __str__(self):
         return f"{self.galleons} Galleons, {self.sickles} Sickles, {self.knuts} Knuts"
-    def __add__(self, other):
-        return Vault(self.galleons+other.galleons,
-                     self.sickles+other.sickles,
-                     self.knuts+other.knuts)
-```
 
+    def __add__(self, other):
+        galleons = self.galleons + other.galleons
+        sickles = self.sickles + other.sickles
+        knuts = self.knuts + other.knuts
+        return Vault(galleons, sickles, knuts)
+
+
+potter = Vault(100, 50, 25)
+print(potter)
+
+weasley = Vault(25, 50, 100)
+print(weasley)
+
+total = potter + weasley
+print(total)
+```
+- 注意 __str__ 方法如何 self 一个格式化的字符串。此外，请注意 __add__ 方法如何允许将两个 vault 的值相加。self 是 + 操作数左侧的值。other 是 + 操作数右侧的 other 。
+- 您可以在 Python 的运算符重载文档中了解更多信息。 https://docs.python.org/3/reference/datamodel.html#special-method-names
 ---
 
 ## 总结
 - <mark>核心能力：</mark> **OOP、类、`raise`、`@property`、类/静态方法、继承、运算符重载**。  
 - **实践建议：** 将校验收敛到类内部；用属性暴露安全状态；保持不变式清晰；适度重载运算符。
+```
+面向对象编程
+类
+抛出raise
+类方法
+静态方法
+继承
+运算符重载
+```
