--- a/ChineseVersion/课程_09_其余的.MD
+++ b/ChineseVersion/课程_09_其余的.MD
@@ -283,6 +283,10 @@ print(meows, end="")
 ---
 
 ## 文档字符串 Docstring
+- 注释函数用途的标准方法是使用文档字符串 (docstring)。
+
+- 注意这三个双引号是如何表示函数的功能的。
+- 您可以使用文档字符串来规范函数特性的文档编写方式。
 
 ```py
 def meow(n: int) -> str:
@@ -295,11 +299,35 @@ def meow(n: int) -> str:
     """
     return "meow\n" * n
 ```
+
+- 请注意，文档字符串中包含了多个参数。例如，它描述了函数接受的参数以及函数的返回值。
+- 您可以在 Python 的文档字符串中了解更多信息。 https://peps.python.org/pep-0257/
+
 <mark>可用 Sphinx 生成 HTML/PDF 文档。</mark>
 
 ---
 
 ## argparse 命令行参数
+- 假设我们想在程序中使用命令行参数。
+```python
+import sys
+
+if len(sys.argv) == 1:
+    print("meow")
+elif len(sys.argv) == 3 and sys.argv[1] == "-n":
+    n = int(sys.argv[2])
+    for _ in range(n):
+        print("meow")
+else:
+    print("usage: meows.py [-n NUMBER]")
+```
+- 注意 sys 是如何导入的，通过它我们可以访问 sys.argv ，这是一个存储程序运行时传递给用户的命令行参数的数组。我们可以使用多个 if 语句来检查用户是否正确运行了我们的程序。
+- 假设这个程序会变得越来越复杂。我们该如何检查用户可能输入的所有参数呢？如果命令行参数超过几个，我们可能就只能放弃了！
+
+
+- 幸运的是， argparse 库可以处理所有复杂的命令行参数字符串的解析工作。
+
+
 
 ```py
 import argparse
@@ -309,15 +337,86 @@ args = parser.parse_args()
 for _ in range(args.n):
     print("meow")
 ```
+- 注意这里导入的是 argparse 而不是 sys 。一个名为 parser 对象由 ArgumentParser 类创建。该类的 add_argument 方法用于告诉 argparse 当用户运行程序时，我们应该期望收到哪些参数。最后，运行 parser 的 parse_args 方法来确保用户已正确包含所有参数。
+
+- 请注意，这里为用户提供了一些文档。具体来说，提供了一个 help 参数。现在，如果用户执行 python meows.py --help 或 -h ，就会看到一些关于如何使用此程序的提示。
+
+- 请注意，不仅包含帮助文档，而且当用户未提供任何参数时，您还可以提供 default 值。
+
+- 这段代码定义了一个简单的命令行工具，它接受一个可选的参数 -n 来指定重复次数。如果用户不提供参数，程序默认打印一次 "meow"；如果用户指定了 -n N，程序就会打印 N 次 "meow"。
+  
+
+- 您可以在 Python 的 argparse 文档中了解更多信息。 https://docs.python.org/3/library/argparse.html
+
 
 ---
 
 ## 拆包 Unpacking
 
+- 如果能把一个变量拆分成两个变量岂不是很好？在文本编辑器窗口中，编写如下代码：
+
 ```py
 first, _ = input("What's your name? ").split(" ")
 print(f"hello, {first}")
 ```
+- 请注意，该程序试图通过简单地以单个空格分割来获取用户的名字。
+
+
+- 如果我们想把硬币存储在一个列表中呢？
+- 为了能够传递整个列表，我们可以使用解包功能。
+
+```python
+def total(galleons, sickles, knuts):
+    return (galleons * 17 + sickles) * 29 + knuts
+
+
+coins = [100, 50, 25]
+
+print(total(*coins), "Knuts")
+``` 
+- 注意 * 如何展开硬币列表的序列，并将每个单独的元素传递给 total 。  
+
+
+- 假设我们可以按任意顺序输入货币名称？在文本编辑器窗口中，编写如下代码：
+```python
+def total(galleons, sickles, knuts):
+    return (galleons * 17 + sickles) * 29 + knuts
+
+
+print(total(galleons=100, sickles=50, knuts=25), "Knuts")
+```
+- 注意看，这个计算结果仍然是正确的。
+
+
+- 提到“名称”和“值”，你可能就会想到字典！你可以用字典来实现这个功能。在文本编辑器窗口中，编写如下代码：
+```python
+def total(galleons, sickles, knuts):
+    return (galleons * 17 + sickles) * 29 + knuts
+
+
+coins = {"galleons": 100, "sickles": 50, "knuts": 25}
+
+print(total(coins["galleons"], coins["sickles"], coins["knuts"]), "Knuts")
+```
+- 请注意，这里提供了一个名为 coins 的字典。我们可以使用诸如“galleons”（大帆船）或“sickles”（西可）之类的键来索引它。
+  
+
+- 由于 total 函数需要三个参数，我们不能传入字典。我们可以使用解包来解决这个问题。在文本编辑器窗口中，编写如下代码：
+```python
+def total(galleons, sickles, knuts):
+    return (galleons * 17 + sickles) * 29 + knuts
+
+
+coins = {"galleons": 100, "sickles": 50, "knuts": 25}
+
+print(total(**coins), "Knuts")
+```  
+
+- 注意 ** 是如何用于解包字典的。解包字典时，它会同时提供键和值。
+
+
+- Notice how a * unpacks the sequence of the list of coins and passes in each of its individual elements to total.
+
 
 ```py
 def total(galleons, sickles, knuts):
