studied et cetera summaries,about position arguments, keywords arguments, map function, list comprehensions, 1h

--- a/ChineseVersion/课程_09_其余的.MD
+++ b/ChineseVersion/课程_09_其余的.MD
@@ -430,6 +430,9 @@ print(total(**{"galleons":100, "sickles":50, "knuts":25}), "Knuts")
 
 ## args 与 kwargs
 
+- args 是位置参数，例如我们提供给 print 函数的参数，如 print("Hello", "World") 。
+- kwargs 是命名参数，或称“关键字参数”，例如我们为 print 提供的参数，如 print(end="") 。
+
 ```py
 def f(*args, **kwargs):
     print("位置参数:", args)
@@ -437,26 +440,98 @@ def f(*args, **kwargs):
 
 f(100, 50, 25, galleons=100, sickles=50, knuts=25)
 ```
+- 如上 print 所示，我们可以让函数接受数量未知的位置参数，也可以让函数接受数量未知的关键字参数。
+- 注意执行此代码后，输出结果将以位置参数的形式打印出来。
+- 我们甚至可以传入命名参数。请注意，命名值是以字典的形式提供的。
+- 想想上面的 print 函数，你会发现 *objects 可以接受任意数量的位置参数。
+- 您可以在 Python 的 print 文档中了解更多信息。 https://docs.python.org/3/library/functions.html#print
 
 ---
 
 ## map 映射
 
-```py
-words = ["This", "is", "CS50"]
-uppercased = list(map(str.upper, words))
-print(uppercased)
+- 如果能喊出一长串无限数量的单词岂不是很棒？
+```python
+def main():
+    yell(["This", "is", "CS50"])
+
+
+def yell(words):
+    uppercased = []
+    for word in words:
+        uppercased.append(word.upper())
+    print(*uppercased)
+
+
+if __name__ == "__main__":
+    main()
 ```
+- 注意，我们遍历每个单词并将其转换为大写，从而累积所有大写单词。然后使用星 * 解包打印出大写列表。
+
+
+- 去掉括号后，我们可以将单词作为参数传递
+
+```py
+def main():
+    yell("This", "is", "CS50")
+
+
+def yell(*words):
+    uppercased = []
+    for word in words:
+        uppercased.append(word.upper())
+    print(*uppercased)
+
+
+if __name__ == "__main__":
+    main()
+```
+- 注意 *words 允许函数接受多个参数。
+
+
+- map 允许你将一个函数映射到一系列值。实际上，我们可以这样编写代码：
+```python
+def main():
+    yell("This", "is", "CS50")
+
+
+def yell(*words):
+    uppercased = map(str.upper, words)
+    print(*uppercased)
+
+
+if __name__ == "__main__":
+    main()
+```
+- 注意 map 接受两个参数。首先，它接受一个函数，我们要将其应用于列表中的每个元素。其次，它接受列表本身，我们将对列表应用上述函数。因此， words 中的所有单词都将被传递给 str.upper 函数，并返回给 uppercased 函数。
+
+
+- 您可以在 Python 的 map 文档中了解更多信息。 https://docs.python.org/3/library/functions.html#map
+
 
 ---
 
 ## 列表推导式
+- 列表推导式允许您使用简洁的一行代码快速创建列表。
 
 ```py
-words = ["This", "is", "CS50"]
-uppercased = [w.upper() for w in words]
-```
+def main():
+    yell("This", "is", "CS50")
 
+
+def yell(*words):
+    uppercased = [arg.upper() for arg in words]
+    print(*uppercased)
+
+
+if __name__ == "__main__":
+    main()
+
+```
+- 注意，我们没有使用 map ，而是用方括号括起来编写了一个 Python 表达式。对于每个参数，都会应用 .upper 。
+
+
+- 进一步探讨这个概念，让我们转向另一个项目。
 筛选：
 ```py
 students = [
@@ -465,8 +540,36 @@ students = [
     {"name": "Ron", "house": "Gryffindor"},
     {"name": "Draco", "house": "Slytherin"},
 ]
-gryffindors = [s["name"] for s in students if s["house"] == "Gryffindor"]
+
+gryffindors = []
+for student in students:
+    if student["house"] == "Gryffindor":
+        gryffindors.append(student["name"])
+
+for gryffindor in sorted(gryffindors):
+    print(gryffindor)
 ```
+- 注意，我们在创建列表时使用了条件判断。 如果学生的学院是格兰芬多，我们就将该学生添加到名单中。最后，我们打印出所有学生的名字。
+
+
+- 更优雅的做法是，我们可以使用列表推导式简化这段代码，如下所示：
+```python
+students = [
+    {"name": "Hermione", "house": "Gryffindor"},
+    {"name": "Harry", "house": "Gryffindor"},
+    {"name": "Ron", "house": "Gryffindor"},
+    {"name": "Draco", "house": "Slytherin"},
+]
+
+gryffindors = [
+    student["name"] for student in students if student["house"] == "Gryffindor"
+]
+
+for gryffindor in sorted(gryffindors):
+    print(gryffindor)
+```
+- 注意列表推导式是在一行内完成的！
+
 
 ---
 
