studied et cetera summaries,about filter, dictionary compresensions, enumerate 36m

--- a/ChineseVersion/课程_09_其余的.MD
+++ b/ChineseVersion/课程_09_其余的.MD
@@ -575,31 +575,77 @@ for gryffindor in sorted(gryffindors):
 
 ## filter 过滤
 
+- 使用 Python 的 filter 函数，我们可以返回满足特定条件的序列子集。
+- 在文本编辑器窗口中，输入以下代码：
+
+
 ```py
-def is_gryffindor(s): return s["house"] == "Gryffindor"
+students = [
+    {"name": "Hermione", "house": "Gryffindor"},
+    {"name": "Harry", "house": "Gryffindor"},
+    {"name": "Ron", "house": "Gryffindor"},
+    {"name": "Draco", "house": "Slytherin"},
+]
+
+def is_gryffindor(s): 
+    return s["house"] == "Gryffindor" # True or False
+
 gryffindors = filter(is_gryffindor, students)
+
+# Lambda version
+gryffindors = filter(lambda s: s["house"] == "Gryffindor", students)
+
+
 for g in sorted(gryffindors, key=lambda s: s["name"]):
     print(g["name"])
 ```
 
+- 注意我们是如何创建名为 is_gryffindor 的函数的。这是一个筛选函数，它接收一个学生 s ，并根据该学生是否属于格兰芬多学院返回 True 或 ` False 。
+- 可以看到，这个新的 filter 函数接受两个参数。首先，它接受一个函数，该函数将应用于序列中的每个元素——在本例中为 is_gryffindor 。其次，它接受一个序列，该序列将应用筛选函数——在本例中为 students 。在 gryffindors 中，我们应该只看到格兰芬多学院的学生。
+- filter 还可以使用 lambda 函数
+- 请注意，提供的学生名单是一样的。
+- 您可以在 Python 的 filter 文档中了解更多信息。https://docs.python.org/3/library/functions.html#filter
 ---
 
 ## 字典推导式
+- 我们可以将列表推导式背后的思想应用到字典中。
+- 现在我们可以通过修改代码来应用字典推导式
 
 ```py
 students = ["Hermione", "Harry", "Ron"]
-gryffindors = [{"name": s, "house": "Gryffindor"} for s in students]
-mapping = {s: "Gryffindor" for s in students}
-```
 
+gryffindors = [{"name": student, "house": "Gryffindor"} for student in students]
+print(gryffindors)
+
+# Or a mapping
+gryffindors = {student: "Gryffindor" for student in students}
+print(gryffindors)
+```
+- 请注意，之前的所有代码都简化为一行，其中为 students 中的每个 student 提供了字典的结构。
+- 注意字典将如何用键值对构建。
 ---
 
 ## enumerate 枚举
 
-```py
-for i, s in enumerate(["Hermione", "Harry", "Ron"], start=1):
-    print(i, s)
+- 我们可能需要对每位学生进行排名。
+```python
+students = ["Hermione", "Harry", "Ron"]
+
+for i in range(len(students)):
+    print(i + 1, students[i])
 ```
+- 注意运行此代码时如何枚举每个学生。
+
+
+- 利用枚举，我们也可以做到这一点：
+```py
+students = ["Hermione", "Harry", "Ron"]
+
+for i, student in enumerate(students):
+    print(i + 1, student)
+```
+- 注意 enumerate 如何显示每个 student 的索引和值。
+- 您可以在 Python 的 enumerate 文档中了解更多信息。
 
 ---
 
