studied et cetera summaries,about generators and iterators, and final summarise, 2h

--- a/ChineseVersion/课程_09_其余的.MD
+++ b/ChineseVersion/课程_09_其余的.MD
@@ -651,28 +651,119 @@ for i, student in enumerate(students):
 
 ## 生成器与迭代器
 
+- 在 Python 中，有一种方法可以防止系统在处理的问题变得过于庞大时耗尽资源。
+
+- 数羊代码：
+```python
+n = int(input("What's n? "))
+for i in range(n):
+    print("🐑" * i)
+```
+- 请注意，该程序会统计你要求的羊的数量。
+
+- 我们可以通过添加 main 函数来使我们的程序更加完善，代码如下：
+```python
+def main():
+    n = int(input("What's n? "))
+    for i in range(n):
+        print("🐑" * i)
+
+
+if __name__ == "__main__":
+    main()
+```
+- 注意这里提供了一个 main 函数。
+  
+
+- 我们已经逐渐养成将部分代码抽象化的习惯。
+- 我们可以通过修改代码来调用绵羊函数，如下所示：
+```python
+def main():
+    n = int(input("What's n? "))
+    for i in range(n):
+        print(sheep(i))
+
+
+def sheep(n):
+    return "🐑" * n
+
+
+if __name__ == "__main__":
+    main()
+```
+- 注意 main 函数是如何进行迭代的。
+
+
+- 我们可以赋予 sheep 更多功能。在文本编辑器窗口中，编写如下代码：
+```python
+def main():
+    n = int(input("What's n? "))
+    for s in sheep(n):
+        print(s)
+
+
+def sheep(n):
+    flock = []
+    for i in range(n):
+        flock.append("🐑" * i)
+    return flock
+
+
+if __name__ == "__main__":
+    main()
+```
+- 注意我们是如何创建一群羊并放回 flock 的。
+
+
+- 运行我们的代码时，您可以尝试不同数量的羊，例如 10 、 1000 和 10000 。如果您要求生成 1000000 只羊，程序可能会完全卡住或崩溃。因为您试图生成一个庞大的羊群列表，计算机可能难以完成计算。
+
+
+- yield 生成器可以通过每次返回少量结果来解决这个问题。在文本编辑器窗口中，编写如下代码：
 - **生成器**通过 `yield` 逐个产生值，<mark>内存占用恒定</mark>。
 
 ```py
+def main():
+    n = int(input("What's n? "))
+    for s in sheep(n):
+        print(s)
+
+
 def sheep(n):
     for i in range(n):
         yield "🐑" * i
 
-def main():
-    n = int(input("what's n? "))
-    for s in sheep(n):
-        print(s)
+
+if __name__ == "__main__":
+    main()
+
 ```
+- 注意 yield 每次只提供一个值，而 for 循环则持续运行。
+
+- 您可以在 Python 的生成器文档中了解更多信息。 https://docs.python.org/3/howto/functional.html#generators
+
+- 您可以在 Python 的迭代器文档中了解更多信息。 https://docs.python.org/3/howto/functional.html#iterators
 
 ---
 
 ## 恭喜！
 
-你已掌握：函数与变量、条件、循环、异常、库、单元测试、文件 I/O、正则表达式、面向对象，以及本讲的一系列实用工具（集合、类型、解析、生成器等）。
+你已掌握：
+函数与变量、
+条件、
+循环、
+异常、
+库、
+单元测试、
+文件 I/O、
+正则表达式、
+面向对象，
+以及本讲的一系列实用工具（集合、类型、解析、生成器等）。
 
 ---
 
 ## This was CS50!
+
+- 最后，大家一起创建最终程序。在终端窗口中输入 code say.py ，然后按如下方式编写代码：
 
 ```py
 import cowsay
@@ -684,5 +775,7 @@ cowsay.cow(this)
 engine.say(this)
 engine.runAndWait()
 ```
+
+- 注意运行此程序如何让你精神抖擞地出发。
 
 > 期待你把这些知识用于解决真实问题，让世界更好。**This was CS50!**
